--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>cpc - bookText </title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <div class ="book-container">
   <div class = "book">
     
@@ -66,3 +76,8 @@
 			</span>
 		</div>
 	</a>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
+</body>
+</html>
