--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     
     <div class = "page-container page-A">
       <div class = "page front page-A-front">
-        <h1>Mrs. Dalloway</h1>
+        <h1>Fading Smile</h1>
         <h3>An Excerpt from Chapter One</h3>
         
-        <h2>by Virginia Woolf</h2>
+        <h2>by darshu</h2>
       </div>
       <div class = "page back page-A-back">
         <p>Mrs. Dalloway said she would buy the flowers herself.</p>
