--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     
     <div class = "page-container page-A">
       <div class = "page front page-A-front">
-        <h1>Fading Smile</h1>
-        <h3>An Excerpt from Chapter One</h3>
+        <h1>Fading Smiles</h1>
+        <h3>story of luck</h3>
         
         <h2>by darshu</h2>
       </div>
